@@ -2,6 +2,7 @@ SUBDIRS = src src/tools
 
 EXTRA_DIST = data/autocorrect/fi_FI.xml data/autocorrect/autocorrect.dtd \
     python/libvoikko.py python/libvoikkotests.py \
+    python/ExtendedMorphologyTest.py \
     doc/oikoluku-korjausehdotukset.txt
 
 ACLOCAL_AMFLAGS = -I m4
