@@ -1834,7 +1834,12 @@ subrule debug_sanan_perusmuodon_osa ($tietue, $vain_alku):
     else
       $res :=+ $tietue.perusmuoto;
     end;
-    if ($tietue.perusmuoto /= nil) then
+    if ($tietue.perusmuoto /= nil and $tietue.luokka in <nimisana,
+                             seikkasana, laatusana, teonsana,
+                             nimi_laatusana, asemosana, suhdesana,
+                             huudahdussana, sidesana, etunimi, sukunimi,
+                             paikannimi, nimi, kieltosana, lyhenne,
+                             lukusana>) then
       $res :=+ "(p=" + $tietue.perusmuoto + ")";
     end;
     if ($tietue.sourceid /= nil) then
